Fixing alignment and responsive spacing on content in vertical and photo grid

--- a/src/blocks/photogrid/style.scss
+++ b/src/blocks/photogrid/style.scss
@@ -76,5 +76,9 @@
 		.grid {
 			min-height: 300px;
 		}
+
+		.content {
+			padding: 1rem 3rem 3.5rem 3rem;
+		}
 	}
 }
