--- a/src/blocks/verticalgrid/style.scss
+++ b/src/blocks/verticalgrid/style.scss
@@ -7,6 +7,7 @@
  .wp-block-ecb-blocks-vertical-stripes-grid {
 	display: grid;
 	grid-template-columns: 60% 40%;
+	min-height: 440px;
 	animation: ecbFadeIn 0.3s ease;
 
 	.grid {
@@ -73,7 +74,10 @@
 			div {
 				position: unset;
 				right: 0;
+				bottom: 0;
+				height: calc( 100% - 3rem );
 				margin-left: 0;
+				padding: 1rem 2rem 2rem 2rem;
 			}
 		}
 	}
